force-app/main/default/objects/Customer_Member_Mapping__c/Customer_Member_Mapping__c.object-meta.xml
<CustomObject>
    <label>Customer Member Mapping</label>
    <nameField>
        <displayFormat>CM-{0000000}</displayFormat>
        <label>Mapping Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Member Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>