force-app/main/default/objects/Customer_Member_Mapping__c/fields/Alternate_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Mobile_Number__c</fullName>
    <formula>MemberId__r.Alternatemobile__c</formula>
    <label>Alternate Mobile Number</label>
    <type>Text</type>
</CustomField>