force-app/main/default/objects/Customer_Member_Mapping__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABHI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>