force-app/main/default/objects/Customer_Member_Mapping__c/fields/Chronic_Condition__c.field-meta.xml
<CustomField>
    <fullName>Chronic_Condition__c</fullName>
    <formula>MemberId__r.Is_Chronic__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Chronic</label>
    <type>Checkbox</type>
</CustomField>