force-app/main/default/objects/Customer_Member_Mapping__c/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Member Mappings (Client Id)</relationshipLabel>
    <relationshipName>Customer_Member_Mappings1</relationshipName>
    <type>Lookup</type>
</CustomField>