force-app/main/default/objects/Customer_Member_Mapping__c/fields/CumulativeBonus__c.field-meta.xml
<CustomField>
    <fullName>CumulativeBonus__c</fullName>
    <label>Cumulative Bonus</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>