force-app/main/default/objects/Customer_Member_Mapping__c/fields/DOB__c.field-meta.xml
<CustomField>
    <fullName>DOB__c</fullName>
    <formula>If(ISBLANK(MemberId__r.PersonContact.Birthdate) , &quot;&quot;, (TEXT(DAY(MemberId__r.PersonContact.Birthdate)) &amp; &quot;/&quot; &amp; TEXT(MONTH(MemberId__r.PersonContact.Birthdate)) &amp; &quot;/&quot; &amp; TEXT(YEAR(MemberId__r.PersonContact.Birthdate))))</formula>
    <label>DOB</label>
    <type>Text</type>
</CustomField>