force-app/main/default/objects/Customer_Member_Mapping__c/fields/Health_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Health_Assessment__c</fullName>
    <label>Health Assessment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>