force-app/main/default/objects/Customer_Member_Mapping__c/fields/Health_Return__c.field-meta.xml
<CustomField>
    <fullName>Health_Return__c</fullName>
    <label>Health Return</label>
    <length>100</length>
    <type>Text</type>
</CustomField>