force-app/main/default/objects/Customer_Member_Mapping__c/fields/Healty_Heart_Score__c.field-meta.xml
<CustomField>
    <fullName>Healty_Heart_Score__c</fullName>
    <label>Healty Heart Score</label>
    <length>100</length>
    <type>Text</type>
</CustomField>