force-app/main/default/objects/Customer_Member_Mapping__c/fields/Is_Chronic__c.field-meta.xml
<CustomField>
    <fullName>Is_Chronic__c</fullName>
    <formula>MemberId__r.Is_Chronic__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Chronic</label>
    <type>Checkbox</type>
</CustomField> 
    <fullName>Loan_Tenure__c</fullName>
    <label>Loan Tenure</label>
    <fullName>Is_Chronic__c</fullName>
    <label>Is Chronic</label>
    <length>10</length>
    <type>Text</type>
</CustomField>