force-app/main/default/objects/Customer_Member_Mapping__c/fields/Member_Client_Code__c.field-meta.xml
<CustomField>
    <fullName>Member_Client_Code__c</fullName>
    <formula>MemberId__r.Client_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Client Code</label>
    <type>Text</type>
</CustomField>