force-app/main/default/objects/Customer_Member_Mapping__c/fields/Member_First_Inception_Date__c.field-meta.xml
<CustomField>
    <fullName>Member_First_Inception_Date__c</fullName>
    <label>Member Inception Date</label>
    <type>Date</type>
</CustomField>