force-app/main/default/objects/Customer_Member_Mapping__c/fields/Member_Id1__c.field-meta.xml
<CustomField>
    <fullName>Member_Id1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member Id TBD</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Member Mappings</relationshipLabel>
    <relationshipName>Customer_Member_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>