force-app/main/default/objects/Customer_Member_Mapping__c/fields/Member_Id__c.field-meta.xml
<CustomField>
    <fullName>Member_Id__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; &amp; MemberId__c, MemberId__r.Client_Code__c, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Id</label>
    <type>Text</type>
</CustomField>