force-app/main/default/objects/Customer_Member_Mapping__c/fields/Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Member_Name__c</fullName>
    <formula>IF( MemberId__r.IsPersonAccount , TRIM(MemberId__r.FirstName) + &quot; &quot; + TRIM(MemberId__r.LastName), MemberId__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Name</label>
    <type>Text</type>
</CustomField>