force-app/main/default/objects/Customer_Member_Mapping__c/fields/Member_Status__c.field-meta.xml
<CustomField>
    <fullName>Member_Status__c</fullName>
    <label>Member Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>