force-app/main/default/objects/Customer_Member_Mapping__c/fields/MemberExternalId__c.field-meta.xml
<CustomField>
    <fullName>MemberExternalId__c</fullName>
    <externalId>true</externalId>
    <label>Customer Member Ext Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>