force-app/main/default/objects/Customer_Member_Mapping__c/fields/MemberId__c.field-meta.xml
<CustomField>
    <fullName>MemberId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Member Mappings (Member id)</relationshipLabel>
    <relationshipName>Customer_Member_Mappings2</relationshipName>
    <type>Lookup</type>
</CustomField>