force-app/main/default/objects/Customer_Member_Mapping__c/fields/Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy Number</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Customer Member Mappings</relationshipLabel>
    <relationshipName>Customer_Member_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>