force-app/main/default/objects/Customer_Member_Mapping__c/fields/Policy_number_Formula__c.field-meta.xml
<CustomField>
    <fullName>Policy_number_Formula__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; &amp; Policy_Number__c, Policy_Number__r.Policy_No__c, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy number</label>
    <type>Text</type>
</CustomField>