force-app/main/default/objects/Customer_Member_Mapping__c/fields/Pre_Existing_Disease_Waiting_Period__c.field-meta.xml
<CustomField>
    <fullName>Pre_Existing_Disease_Waiting_Period__c</fullName>
    <label>Pre-existing Disease</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>