force-app/main/default/objects/Customer_Member_Mapping__c/fields/Primary_email_ID__c.field-meta.xml
<CustomField>
    <fullName>Primary_email_ID__c</fullName>
    <formula>MemberId__r.PersonEmail</formula>
    <label>Primary email ID</label>
    <type>Text</type>
</CustomField>