force-app/main/default/objects/Customer_Member_Mapping__c/fields/Primary_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_Mobile_Number__c</fullName>
    <formula>MemberId__r.PersonMobilePhone</formula>
    <label>Primary Mobile Number</label>
    <type>Text</type>
</CustomField>