force-app/main/default/objects/Customer_Member_Mapping__c/fields/Relation1__c.field-meta.xml
<CustomField>
    <fullName>Relation1__c</fullName>
    <formula>MemberId__r.Relation__c</formula>
    <label>Relation</label>
    <type>Text</type>
</CustomField>