force-app/main/default/objects/Customer_Member_Mapping__c/fields/Rider_Opted__c.field-meta.xml
<CustomField>
    <fullName>Rider_Opted__c</fullName>
    <formula>MemberId__r.Rider_Opted__c</formula>
    <label>Rider Opteds</label>
    <type>Text</type>
</CustomField>