force-app/main/default/objects/Customer_Member_Mapping__c/fields/Riders_Opted__c.field-meta.xml
<CustomField>
    <fullName>Riders_Opted__c</fullName>
    <label>Riders Opted</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>