force-app/main/default/objects/Customer_Member_Mapping__c/fields/Search_Member__c.field-meta.xml
<CustomField>
    <fullName>Search_Member__c</fullName>
    <displayFormat>CM-{00000}</displayFormat>
    <label>Search Member</label>
    <type>AutoNumber</type>
</CustomField>