force-app/main/default/objects/Customer_Member_Mapping__c/fields/Sum_Insured__c.field-meta.xml
<CustomField>
    <fullName>Sum_Insured__c</fullName>
    <formula>MemberId__r.SumInsured__c</formula>
    <label>Sum Insured</label>
    <type>Text</type>
</CustomField>