force-app/main/default/objects/Customer_Member_Mapping__c/fields/SumInsured__c.field-meta.xml
<CustomField>
    <fullName>SumInsured__c</fullName>
    <label>Sum Insured</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>