force-app/main/default/objects/Customer_Member_Mapping__c/fields/Super_Ncb_Amount__c.field-meta.xml
<CustomField>
    <fullName>Super_Ncb_Amount__c</fullName>
    <label>Super NCB Amount</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>