force-app/main/default/objects/Customer_Member_Mapping__c/fields/Total_NCB__c.field-meta.xml
<CustomField>
    <fullName>Total_NCB__c</fullName>
    <label>Total NCB</label>
    <length>100</length>
    <type>Text</type>
</CustomField>