force-app/main/default/objects/Customer_Member_Mapping__c/fields/Upfront_Discount__c.field-meta.xml
<CustomField>
    <fullName>Upfront_Discount__c</fullName>
    <label>Upfront Discount</label>
    <length>50</length>
    <type>Text</type>
</CustomField>