force-app/main/default/objects/Customer_Member_Mapping__c/recordTypes/Customer_Member.recordType-meta.xml
<RecordType>
    <fullName>Customer_Member</fullName>
    <active>true</active>
    <label>Customer Member</label>
</RecordType>