force-app/main/default/objects/Customer_Member_Mapping__c/recordTypes/Customer_Role.recordType-meta.xml
<RecordType>
    <fullName>Customer_Role</fullName>
    <active>false</active>
    <label>Customer Role</label>
</RecordType>