force-app/main/default/objects/Customer_Member_Mapping__c/recordTypes/Customer_Segment.recordType-meta.xml
<RecordType>
    <fullName>Customer_Segment</fullName>
    <active>false</active>
    <label>Customer Segment</label>
</RecordType>