force-app/main/default/objects/Customer_Member_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Customer_Type__c</columns>
    <columns>MemberExternalId__c</columns>
    <columns>Policy_Number__c</columns>
    <columns>Member_Id1__c</columns>
    <columns>Member_Status__c</columns>
    <columns>Health_Return__c</columns>
    <columns>Total_NCB__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>